Avoid mocking ReplicationFetchFilter
ReplicationFetchFilter is a simple interface that can
be implemented with lambdas and there is no need
to use complex Mockito magic.

Change-Id: I2b8d715707c9d9c02fc58c84b7b91aada45de656